temp/objects/Class__c.object
<CustomObject>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Maximum_Enrollment__c</fullName>
        <label>Maximum Enrollment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed_Date_Time__c</fullName>
        <label>Proposed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <label>Class</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Proposed_Date_Time__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Upcoming_Classes</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Proposed_Date_Time__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Proposed_Date_Time__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Approved__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Upcoming Classes</label>
    </listViews>
    <nameField>
        <label>Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classes</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Class_Team__c</fullName>
        <label>Class Team</label>
    </sharingReasons>
</CustomObject>